WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220612
REGRESSION (
r270964
): Hovering cursor over Earth animation causes flashing red distortion on GitHub.com
https://bugs.webkit.org/show_bug.cgi?id=220612
Summary
REGRESSION (r270964): Hovering cursor over Earth animation causes flashing re...
Dean Jackson
Reported
2021-01-13 17:58:50 PST
Load
https://github.com
when not logged in. Mouse-over the animation on the right. Globe flickers red.
Attachments
Patch
(3.09 KB, patch)
2021-01-18 00:32 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2021-01-13 17:59:17 PST
Works: Internal 9bd9f2fe3903 - OpenSource
r270963
Fails: Internal 9bd9f2fe3903 - OpenSource
r270964
http://trac.webkit.org/changeset/270964
<
rdar://72811218
>
Radar WebKit Bug Importer
Comment 2
2021-01-13 17:59:33 PST
<
rdar://problem/73175210
>
Kimmo Kinnunen
Comment 3
2021-01-15 12:11:55 PST
Affects WebGL2 contexts: taking a snapshot of the tab will change the write framebuffer binding incorrectly. Will fix coming week.
Kimmo Kinnunen
Comment 4
2021-01-18 00:32:02 PST
Created
attachment 417807
[details]
Patch
EWS
Comment 5
2021-01-19 13:00:53 PST
commit-queue failed to commit
attachment 417807
[details]
to WebKit repository.
EWS
Comment 6
2021-01-19 13:18:41 PST
Committed
r271609
: <
https://trac.webkit.org/changeset/271609
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417807
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug