REGRESSION (r270964): Hovering cursor over Earth animation causes flashing red distortion on GitHub.com https://bugs.webkit.org/show_bug.cgi?id=220612 <rdar://problem/73175210>

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-01-19
Reviewed by Dean Jackson.

When reading the display buffer for WebKit snapshots, use READ_FRAMEBUFFER on WebGL2 and
FRAMEBUFFER on WebGL1. Fixes the case where WebGL2 contexts would get broken because
taking a snapshot would overwrite the framebuffer attachment.

No new tests, snapshots are not tested at the moment.

* platform/graphics/angle/GraphicsContextGLANGLEUtilities.h:
(WebCore::ScopedRestoreReadFramebufferBinding::framebufferTarget const):
* platform/graphics/cocoa/GraphicsContextGLOpenGLCocoa.mm:
(WebCore::GraphicsContextGLOpenGL::readCompositedResults):

Canonical link: https://commits.webkit.org/233142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271609 268f45cc-cd09-0410-ab3c-d52691b4dbfc